pypi/services.yml
apiVersion: v1
kind: Service
metadata:
  name: pypi
  namespace: pypi
spec:
  selector:
    app: dpypi
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30310
